ajuste add opção de avaliação

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="parques.html">Parques</a></li>
                     <li><a href="vidanoturna.html">Vida Noturna</a></li>
                     <li><a href="quemSomos.html">Quem Somos</a></li>
+                    <li><a href="login.html">Logar</a></li>
                 </ul>
             </nav>
         </div>
