--- a/quemSomos.html
+++ b/quemSomos.html
@@ -53,7 +53,7 @@
                     <hr>
                     <h2>Marcos Maciel</h2>
                     <h3>Rm88267</h3>
-                    <p>Chatbot</p>
+                    <p>AI & Chatbot</p>
                 </div>
                 <div class="card">
                     <img src="./img/grupo/MarcosVinicius.jpeg" alt="Maros Vinicius">
