--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -38,7 +38,7 @@
                             história. Desde as acaloradas discussões sobre a repressão política da década de 60 até as
                             comemorações dos 450 anos da metrópole, em 2004. O Bar Brahma já é parte indissociável da
                             trajetória de São Paulo.</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar5()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <!--lista e botao cardapio-->
@@ -80,7 +80,7 @@
                             Bassoleil, a exuberância visual e o serviço único despertam os sentidos dos visitantes em
                             todas as ocasiões, seja num café da manhã em família, um almoço de negócios, happy hour
                             entre amigos ou em um jantar romântico a dois.</p>
-                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar6()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -88,9 +88,9 @@
                                 <li>Horario de funcionamento : 12:00h - 21:00h</li>
                                 <li>Melhor dia para visitação: Segunda</li>
                                 <li>Horários de maior procura :17:00h - 19:00h (sab)</li>
-                                <li> Preços a partir de : R$ 7,00</li>
+                                <li>Preços a partir de : R$ 7,00</li>
                                 <li>Telefone para contato: (11) 3055-4702 ou 3055-4700</li>
-                                <li> Site: <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
+                                <li>Site: <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
                                         target="_blank">www.restaurante-bar/skye</a></li>
                             </ul>
                         </div>
@@ -122,16 +122,16 @@
                             Helô Pinheiro em seu doce balanço a caminho do mar. A rua do bar também tem Veloso no nome.
                             Coincidência. Ou destino. As mesinhas são poucas, só catorze. Aí, tem sempre espera e
                             burburinho — que já fazem parte da diversão</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar7()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li> Horario de funcionamento : 16:00h - 21:00h</li>
-                                <li> Melhor dia para visitação : Quarta</li>
-                                <li> Horários de maior procura : 17:00h - 21:00h(sab)</li>
-                                <li> Preços a partir de : R$ 35,00</li>
-                                <li> Site: <a href="http://www.velosobar.com.br/index.php"
+                                <li>Horario de funcionamento : 16:00h - 21:00h</li>
+                                <li>Melhor dia para visitação : Quarta</li>
+                                <li>Horários de maior procura : 17:00h - 21:00h(sab)</li>
+                                <li>Preços a partir de : R$ 35,00</li>
+                                <li>Site: <a href="http://www.velosobar.com.br/index.php"
                                         target="_blank">www.velosobar.com.br</a>
                                 </li>
                             </ul>
@@ -162,16 +162,15 @@
                             celebrarem todas as alegrias da vida de uma maneira muito especial. Dançar é sem dúvida
                             alguma uma das formas mais elementares e seminais de expressarmos nossa felicidade e é ainda
                             melhor quando podemos fazer isto entre nossos pares, ao som de boa música</p>
-                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar8()">Avalie</div>
                     </div>
                     <div class="list">
                         <ul>
-                            <li> Horario de funcionamento: Qui, Sex, Sab das 23:00h - 7:00h
-                            </li>
-                            <li> Melhor dia para visitação: Sabado </li>
-                            <li> Horários de maior procura: 23:00h - 3:00h </li>
-                            <li> Preços a partir de : R$ 40,00</li>
-                            <li> Temporariamente fechado devido ao momento que estamos na Pandemia</li>
+                            <li>Horario de funcionamento: Qui, Sex, Sab das 23:00h - 7:00h</li>
+                            <li>Melhor dia para visitação: Sabado </li>
+                            <li>Horários de maior procura: 23:00h - 3:00h </li>
+                            <li>Preços a partir de : R$ 40,00</li>
+                            <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
                             <li>Site: <a href="http://d-edge.com.br/" target="_blank">www.d-edge.com.br</a></li>
                         </ul>
                     </div>
@@ -201,7 +200,7 @@
                             pessoas que extravasaram a portas fechadas. O clima é eletrizante. Só quem está lá sabe o
                             que acontece. A pista pega fogo. Clube LGBTQIA+ com pistas de dança modernas, área externa,
                             piscina e um público amante de música eletrônica. </p>
-                        <div class="auto"> 4,4 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,4 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar9()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -209,7 +208,7 @@
                                 <li>Horario de funcionamento : Sábados 20:00h - 08:00h Domingos 17:00h - 06:00h</li>
                                 <li>Melhor dia para visitação: Sábados</li>
                                 <li>Horários de maior procura :22:00h - 05:00h</li>
-                                <li> Preços a partir de : R$ 35,00</li>
+                                <li>Preços a partir de : R$ 35,00</li>
                                 <li>Telefone para contato: (11) 3868-5858</li>
                                 <li>Temporariamente fechado devido ao momento que estamos na Pandemia</li>
                                 <li>Instagram oficial: <a href="https://www.instagram.com/theweekoficial/?hl=pt-br"
@@ -239,7 +238,7 @@
                             do que uma casa de shows, pois concentra restaurante, pista de dança, camarotes e centro de
                             convenções. Ambientes diferenciados, como o Salão, as praças Sertaneja, Caipira e do Cavalo,
                             dão o tom temático ao lugar.</p>
-                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar10()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -247,7 +246,7 @@
                                 <li>Horario de funcionamento : Sábados 14:00h - 22:00h</li>
                                 <li>Melhor dia para visitação: Sábados</li>
                                 <li>Horários de maior procura :18:00h - 21:00h</li>
-                                <li> Preços a partir de : R$ 20,00</li>
+                                <li>Preços a partir de : R$ 20,00</li>
                                 <li>Telefone para contato: (11) 3868-9944</li>
                                 <li>Site oficial: <a href="https://villacountry.com.br/" target="_blank">
                                         www.villacountry.com.br</a> </li>
@@ -259,7 +258,7 @@
                         </div>
                     </div>
                     <h3>Localização :</h3>
-                    <p> Av. Francisco Matarazzo, 774 - Água Branca, São Paulo</p>
+                    <p>Av. Francisco Matarazzo, 774 - Água Branca, São Paulo</p>
                     <div class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1264997749395!2d-46.672488185022864!3d-23.527952184699526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5802fdab9fd7%3A0x8f19e039ceb9e889!2sVilla%20Country!5e0!3m2!1spt-BR!2sbr!4v1622497874251!5m2!1spt-BR!2sbr"></iframe>
