--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                     <div class="box">
                         <h1>Login</h1>
                         <hr>
-                        <form action="index.html" method="POST">
+                        <form action="./index.html" method="get">
                             <div class="input">
                                 <label for="idEmail">Seu e-mail : </label>
                                 <input type="email" name="Email" id="email" placeholder="contato@email.com"
