--- a/parques.html
+++ b/parques.html
@@ -37,7 +37,8 @@
                         <p>O Parque Ibirapuera é um parque urbano localizado na cidade de São Paulo, Brasil. Em 2017,
                             foi o parque mais visitado da América Latina, com aproximadamente 14 milhões de visitas,
                             além de ser um dos locais mais fotografados do mundo.</p>
-                        <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,7 <img class="avaliacao" target="_blank" src="img/4,5.png" alt="4,5/5"
+                                onclick="avaliar()">Avalie</div>
                     </div>
                     <div class="list">
                         <ul>
@@ -66,14 +67,17 @@
                             naturalista brasileiro Frederico Carlos Hoehne, para que implantasse um projeto de botânica
                             na região da Água Funda, na cidade de São Paulo. Antes disso a região servia para
                             abastecimento de água do Ipiranga</p>
-                        <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"
+                                onclick="avaliar1()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
                             <ul>
-                                <li> Horario de funcionamento : 9:00h - 17:00h</li>
-                                <li> Telefone para contato : (11) 5067-6000</li>
-                                <li> Valor de entrada : R$ 10,00</li>
+                                <li>Horario de funcionamento : 9:00h - 17:00h</li>
+                                <li>No momento está temporariamente fechado </li>
+                                <li>Telefone para contato : (11) 5067-6000</li>
+                                <li>Valor de entrada : R$ 10,00</li>
+                                <li>Fechado Temporariamente</li>
                                 <li> Site : <a href="https://jardimbotanico.sp.gov.br/"
                                         target="_blank">www.jardimbotanico.sp.gov.br/</a></li>
                             </ul>
@@ -103,7 +107,8 @@
                         <p>O Parque Alfredo Volpi é um parque localizado no bairro de Cidade Jardim, distrito do
                             Morumbi, na zona oeste da cidade brasileira de São Paulo e Prefeitura Regional do Butantã.
                             Possui uma área de 142.432 m²</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"
+                                onclick="avaliar2()">Avalie</div>
                     </div>
                     <div class="list">
                         <ul>
@@ -132,13 +137,14 @@
                         <p>Parque Buenos Aires é um parque público localizado no bairro de Higienópolis, na região
                             central da cidade de São Paulo, outrora chamado Praça Buenos Aires. O local conta com 22,2
                             mil metros quadrados de extensa área verde</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"
+                                onclick="avaliar3()">Avalie</div>
                     </div>
                     <div class="list">
                         <ul>
-                            <li> Horario de funcionamento : 06:00 - 19:00</li>
-                            <li> Telefone para contato : (11) 3666-8032</li>
-                            <li> Site : <a
+                            <li>Horario de funcionamento : 06:00 - 19:00</li>
+                            <li>Telefone para contato : (11) 3666-8032</li>
+                            <li>Site : <a
                                     href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732"
                                     target="_blank">www.parque-buenos-aires</a>
                             </li>
@@ -163,7 +169,8 @@
                         <p>O Parque da Independência, inaugurado em 1989, nas margens do córrego do bairro do Ipiranga,
                             na cidade de São Paulo, faz parte do patrimônio histórico cultural brasileiro devido ao
                             Grito da Independência do país, ali proclamada por D. Pedro I</p>
-                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
+                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"
+                                onclick="avaliar4()">Avalei</div>
                     </div>
                     <div class="list">
                         <ul>
@@ -176,7 +183,7 @@
                         </ul>
                     </div>
                     <h3>Localização :</h3>
-                    <p> Av. Nazaré, s/n - Ipiranga, São Paulo </p>
+                    <p>Av. Nazaré, s/n - Ipiranga, São Paulo </p>
                     <div class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.562181699042!2d-46.61201598502182!3d-23.58416288467166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b944452677b%3A0xd8cac2fbf200334a!2sParque%20Independ%C3%AAncia!5e0!3m2!1spt-BR!2sbr!4v1622758226488!5m2!1spt-BR!2sbr"></iframe>
