--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
         <div class="quadro">
-            <img src="img/aviao-e-aeronave-imagem-animada.gif">
+            <img src="img/aviao-e-aeronave-imagem-animada.gif" alt="avião se movendo">
             <h3 class="tamanho">Bem vindo ao projeto Traveller!</h3>
             <h3 class="tamanho">Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h3>
             <p class="tamanho">Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão
