--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="input">
                                 <label for="idPass">Sua Senha :</label>
-                                <input type="password" name="Pass" id="idPass" placeholder="Senha" class="campo"
+                                <input type="password" name="Pass" id="idSenha" placeholder="Senha" class="campo"
                                     required pattern=".{6,}">
                             </div>
                             <div class="input">
