--- a/parques.html
+++ b/parques.html
@@ -37,7 +37,7 @@
                         <p>O Parque Ibirapuera é um parque urbano localizado na cidade de São Paulo, Brasil. Em 2017,
                             foi o parque mais visitado da América Latina, com aproximadamente 14 milhões de visitas,
                             além de ser um dos locais mais fotografados do mundo.</p>
-                        <div class="auto"> 4,7 <img class="avaliacao" target="_blank" src="img/4,5.png" alt="4,5/5"
+                        <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"
                                 onclick="avaliar()">Avalie</div>
                     </div>
                     <div class="list">
