--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -38,7 +38,7 @@
                             história. Desde as acaloradas discussões sobre a repressão política da década de 60 até as
                             comemorações dos 450 anos da metrópole, em 2004. O Bar Brahma já é parte indissociável da
                             trajetória de São Paulo.</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar5()">Avalie</div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="nota 4,5/5" onclick="avaliar5()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <!--lista e botao cardapio-->
@@ -80,7 +80,7 @@
                             Bassoleil, a exuberância visual e o serviço único despertam os sentidos dos visitantes em
                             todas as ocasiões, seja num café da manhã em família, um almoço de negócios, happy hour
                             entre amigos ou em um jantar romântico a dois.</p>
-                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar6()">Avalie</div>
+                        <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="nota 4,5/5" onclick="avaliar6()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -122,7 +122,7 @@
                             Helô Pinheiro em seu doce balanço a caminho do mar. A rua do bar também tem Veloso no nome.
                             Coincidência. Ou destino. As mesinhas são poucas, só catorze. Aí, tem sempre espera e
                             burburinho — que já fazem parte da diversão</p>
-                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar7()">Avalie</div>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="nota 4,5/5" onclick="avaliar7()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -162,7 +162,7 @@
                             celebrarem todas as alegrias da vida de uma maneira muito especial. Dançar é sem dúvida
                             alguma uma das formas mais elementares e seminais de expressarmos nossa felicidade e é ainda
                             melhor quando podemos fazer isto entre nossos pares, ao som de boa música</p>
-                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar8()">Avalie</div>
+                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="nota 4,5/5" onclick="avaliar8()">Avalie</div>
                     </div>
                     <div class="list">
                         <ul>
@@ -200,7 +200,7 @@
                             pessoas que extravasaram a portas fechadas. O clima é eletrizante. Só quem está lá sabe o
                             que acontece. A pista pega fogo. Clube LGBTQIA+ com pistas de dança modernas, área externa,
                             piscina e um público amante de música eletrônica. </p>
-                        <div class="auto"> 4,4 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar9()">Avalie</div>
+                        <div class="auto"> 4,4 <img class="avaliacao" src="img/4,5.png" alt="nota 4,5/5" onclick="avaliar9()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
@@ -238,7 +238,7 @@
                             do que uma casa de shows, pois concentra restaurante, pista de dança, camarotes e centro de
                             convenções. Ambientes diferenciados, como o Salão, as praças Sertaneja, Caipira e do Cavalo,
                             dão o tom temático ao lugar.</p>
-                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"onclick="avaliar10()">Avalie</div>
+                        <div class="auto"> 4,3 <img class="avaliacao" src="img/4,5.png" alt="nota 4,3/5" onclick="avaliar10()">Avalie</div>
                     </div>
                     <div class="DesAva">
                         <div class="list">
