--- a/parques.html
+++ b/parques.html
@@ -195,6 +195,19 @@
     <footer class="rodape">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
+    <script>
+        window.watsonAssistantChatOptions = {
+            integrationID: "313058ce-9ecc-49b7-bc05-73ca1bdfb833", // The ID of this integration.
+            region: "us-south", // The region your integration is hosted in.
+            serviceInstanceID: "7542444f-0c10-47aa-afa0-fae9eeb13c60", // The ID of your service instance.
+            onLoad: function (instance) { instance.render(); }
+        };
+        setTimeout(function () {
+            const t = document.createElement('script');
+            t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
+            document.head.appendChild(t);
+        });
+    </script>
 </body>
 
 </html>
